--- a/HW3/Makefile
+++ b/HW3/Makefile
@@ -1,22 +1,22 @@
-all: testParser.class
+all: testChecker.class
 
-testParser.class: testParser.java myParser.java
-	javac -cp ./antlr-3.5.2-complete.jar:. testParser.java
+testChecker.class: testChecker.java myChecker.java
+	javac -cp ./antlr-3.5.2-complete.jar:. testChecker.java
 
-myParser.java: myParser.g
-	java -cp ./antlr-3.5.2-complete.jar org.antlr.Tool myParser.g
+myChecker.java: myChecker.g
+	java -cp ./antlr-3.5.2-complete.jar org.antlr.Tool myChecker.g
 
-test1: testParser.class
-	java -cp ./antlr-3.5.2-complete.jar:. testParser input01.c
+test1: testChecker.class
+	java -cp ./antlr-3.5.2-complete.jar:. testChecker input01.c
+	make clear
+test2: testChecker.class
+	java -cp ./antlr-3.5.2-complete.jar:. testChecker input02.c
 
-test2: testParser.class
-	java -cp ./antlr-3.5.2-complete.jar:. testParser input02.c
+test3: testChecker.class
+	java -cp ./antlr-3.5.2-complete.jar:. testChecker input03.c
 
-test3: testParser.class
-	java -cp ./antlr-3.5.2-complete.jar:. testParser input03.c
-
-test4: testParser.class
-	java -cp ./antlr-3.5.2-complete.jar:. testParser input04.c
+test4: testChecker.class
+	java -cp ./antlr-3.5.2-complete.jar:. testChecker input04.c
 
 clear:
-	rm *.class myParserLexer.java myParserParser.java myParser.tokens
+	rm *.class myCheckerLexer.java myCheckerParser.java myChecker.tokens
